cleanup a little